removing some fo the garbage that didnt do anything and fixed the center align on the links

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,20 +48,16 @@ td{
 #top_section_footer{
 	border: 1px solid;
 	border-color: white;
-	overflow: auto;
 	margin-left: 1%;
 	margin-right: 1%;
 	text-align: center;
-	vertical-align: middle;
 }
 #top_section_footer a{
-	padding-top:2%;
 	float:left;
-	text-align: center;
 	width:20%;
-	margin-top: 0.5%;
-	margin-bottom:0.5%;
+	padding-top:1.3%;
 	text-decoration: none;
+	vertical-align: center;
 	color: white;
 
 
